Channel game list UI
